# e_store_api

./: .env_example  .gitignore  NOTES.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
celery_worker/: __init__.py
e_store/: Dockerfile  config.py  db.py  email_config.py  main.py
e_store/authentication/: jwt.py  router.py  schemas.py
e_store/authentication/router/: __init__.py  auth_router.py
e_store/cart/: models.py  router.py  services.py
e_store/cart/models/: __init__.py  cart.py
e_store/cart/router/: __init__.py  cart_router.py
e_store/orders/: mail.py  models.py  services.py  tasks.py
e_store/orders/models/: __init__.py  order.py
e_store/orders/router/: __init__.py  order_router.py
e_store/products/: models.py  router.py  services.py
e_store/products/models/: __init__.py  categories.py  products.py
e_store/products/router/: __init__.py  category_router.py  products_router.py
e_store/shared/exceptions/: http_400s.py
e_store/shared/models/: __init__.py  time_stamp_model.py  unique_model.py
e_store/templates/order/: order_creatation_invoice.html
e_store/users/: hashing.py  models.py  router.py  services.py  validator.py
e_store/users/models/: __init__.py  address.py  user.py
e_store/users/router/: __init__.py  user_router.py
migrations/: env.py
migrations/versions/: 13e887697e69_init_user_table.py  1534611be4f7_adding_order_and_orderitem_tables.py  2550f97a54cc_user_has_disabled_username.py  32d5b160eb40_add_total_field_for_cart_tables.py  8b31b21c29f9_create_cart_cartitem_tabels.py  b8d893efab08_create_products_and_categories_tabels.py  c2e5b0e9c171_user_email_as_unique.py  dafd8b0b4c99_add_address_table_and_update_.py
tests/: conf_test.py  test_db.py
