[tool.poetry]
name = "e-store"
version = "0.1.0"
description = ""
authors = ["Yossef-Dawoad <yossefdawoad15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
