[tool.poetry]
name = "e-store"
version = "0.1.0"
description = ""
authors = ["Yossef-Dawoad <yossefdawoad15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
sqlalchemy = "^2.0.30"
pydantic = {extras = ["email"], version = "^2.7.1"}
sqlmodel = "^0.0.18"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
