[tool.poetry]
name = "e-store"
version = "0.1.0"
description = ""
authors = ["Yossef-Dawoad <yossefdawoad15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.111.0" }
psycopg = { extras = ["binary", "pool"], version = "^3.1.19" }
sqlalchemy = "^2.0.30"
pydantic = { extras = ["email"], version = "^2.7.1" }
sqlmodel = "^0.0.18"
alembic = "^1.13.1"
passlib = { extras = ["argon2"], version = "^1.7.4" }
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
python-multipart = "^0.0.9"
celery = { extras = ["redis"], version = "^5.4.0" }
slowapi = "^0.1.9"
flower = "^2.0.1"
fastapi-mail = "^1.4.1"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.13"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = [
    'C4',
    "F",       # pyflakes
    "E",       # Errors
    "W",       # warnnings
    "RUF",     # Ruff-specific rules
    "PERF",    #PREFlint
    "PL",      # PYLINT
    "UP",      # pyupgrade
    'SIM',     #sim for code simplification
    'TCH',     #tch for type checking
    'F707',    # Syntax error in forward annotation
    'I001',    # Import block is un-sorted or un-formatted
    'I002',    # Missing required import:
    'COM',     # FLAKE COMMA
    'ANN',     # flake8-annotations
    'PYI052',  #Need type annotation for
    'DTZ',     #FLAKE datetime
    'ASYNC',   #FLAKE ASYNC
    'PLE1700',
]
show-fixes = true
target-version = "py310"
line-length = 110
ignore = ['E501', 'SIM115', 'ANN101', "UP007", "E701"]
extend-exclude = ['alembic', 'migrations']
